--- a/blog.html
+++ b/blog.html
@@ -69,7 +69,7 @@
 	<div class="hamburger_bar trans_400 d-flex flex-row align-items-center justify-content-start">
 		<div class="hamburger">
 			<div class="menu_toggle d-flex flex-row align-items-center justify-content-start">
-				<span>menu</span>
+				<span></span>
 				<div class="hamburger_container">
 					<div class="menu_hamburger">
 						<div class="line_1 hamburger_lines" style="transform: matrix(1, 0, 0, 1, 0, 0);"></div>
@@ -113,7 +113,7 @@
 
 
 
-							<div class="home_title"><h1>Our Blog</h1></div>
+							<div class="home_title"><h1>Nuestro Blog</h1></div>
 						</div>
 					</div>
 				</div>
@@ -138,7 +138,7 @@
 							<div class="blog_post_title"><a href="#">Directamente a tu hogar</a></div>
 							<div class="blog_post_info">
 								<ul class="d-flex flex-row align-items-center justify-content-start">
-									<li>by <a href="#">Chef Marco</a></li>
+									<li><a href="#">Chef Marco</a></li>
 									<!-- <li>in <a href="#">Lifestyle</a></li>
 									<li><a href="#">2 Comments</a></li> -->
 								</ul>
@@ -169,7 +169,7 @@
 							<div class="blog_post_title"><a href="#">La auténtica pizza frita napolitana</a></div>
 							<div class="blog_post_info">
 								<ul class="d-flex flex-row align-items-center justify-content-start">
-									<li>by <a href="#">Chef Marco</a></li>
+									<li><a href="#">Chef Marco</a></li>
 									<!-- <li>in <a href="#">Lifestyle</a></li>
 									<li><a href="#">2 Comments</a></li> -->
 								</ul>
@@ -192,7 +192,7 @@
 							<div class="blog_post_title"><a href="#">Comienza tu día en A casa di Marco</a></div>
 							<div class="blog_post_info">
 								<ul class="d-flex flex-row align-items-center justify-content-start">
-									<li>by <a href="#">Chef Marco</a></li>
+									<li><a href="#">Chef Marco</a></li>
 									<!-- <li>in <a href="#">Lifestyle</a></li>
 									<li><a href="#">2 Comments</a></li> -->
 								</ul>
