--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
 	<div class="hamburger_bar trans_400 d-flex flex-row align-items-center justify-content-start">
 		<div class="hamburger">
 			<div class="menu_toggle d-flex flex-row align-items-center justify-content-start">
-				<span>menu</span>
+				<span></span>
 				<div class="hamburger_container">
 					<div class="menu_hamburger">
 						<div class="line_1 hamburger_lines" style="transform: matrix(1, 0, 0, 1, 0, 0);"></div>
@@ -84,7 +84,7 @@
 	<div class="menu trans_800">
 		<div class="menu_content d-flex flex-column align-items-center justify-content-center text-center">
 			<ul>
-				<li><a href="index.html">home</a></li>
+				<li><a href="index.html">Inicio</a></li>
 				<li><a href="about.html">Sobre nosotros</a></li>
 				<li><a href="menu.html">menu</a></li>
 				<li><a href="delivery.html">Envío</a></li>
@@ -126,7 +126,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6">
-					<div class="contact_title">Contact info</div>
+					<div class="contact_title">Información de contacto</div>
 					<div class="contact_text">
 						<p>Gracias por visitar nuestro sitio web. Esperamos haberle hecho agua la boca con nuestra deliciosa cocina italiana y española. Estamos deseando darle la bienvenida en nuestro restaurante y hacerle probar nuestros platos preparados con ingredientes de alta calidad. Para reservas o información, no dude en ponerse en contacto con nosotros por teléfono o correo electrónico, estaremos encantados de ayudarle. Suspendisse potenti.</p>
 					</div>
@@ -140,13 +140,13 @@
 						<div class="contact_list_content">
 							<ul class="contact_list">
 								<li class="d-flex flex-row align-items-start justify-content-start">
-									<div><div>Address</div></div>
+									<div><div>Dirección</div></div>
 									<div><a href="https://www.google.com/maps/place/A+casa+di+Marco/@41.6645795,-0.8825034,14z/data=!4m14!1m7!3m6!1s0xd59152dcbbb798d:0xe400a64d3d30e5c9!2sA+casa+di+Marco!8m2!3d41.6645795!4d-0.8691844!16s%2Fg%2F11t_swddym!3m5!1s0xd59152dcbbb798d:0xe400a64d3d30e5c9!8m2!3d41.6645795!4d-0.8691844!16s%2Fg%2F11t_swddym" target=”_blank”>
 									C. de los Caminos del Norte 5/7, 50014 Zaragoza
 								  </a></div>
 								</li>
 								<li class="d-flex flex-row align-items-start justify-content-start">
-									<div><div>Phone</div></div>
+									<div><div>Teléfono</div></div>
 									<div><a href="https://wa.me/34624818116" target=”_blank”>34624818116</a></div>
 								</li>
 								<li class="d-flex flex-row align-items-start justify-content-start">
