--- a/elements.html
+++ b/elements.html
@@ -56,7 +56,7 @@
 	<div class="hamburger_bar trans_400 d-flex flex-row align-items-center justify-content-start">
 		<div class="hamburger">
 			<div class="menu_toggle d-flex flex-row align-items-center justify-content-start">
-				<span>menu</span>
+				<span></span>
 				<div class="hamburger_container">
 					<div class="menu_hamburger">
 						<div class="line_1 hamburger_lines" style="transform: matrix(1, 0, 0, 1, 0, 0);"></div>
@@ -73,7 +73,7 @@
 	<div class="menu trans_800">
 		<div class="menu_content d-flex flex-column align-items-center justify-content-center text-center">
 			<ul>
-				<li><a href="index.html">home</a></li>
+				<li><a href="index.html">Inicio</a></li>
 				<li><a href="about.html">Sobre nosotros</a></li>
 				<li><a href="menu.html">menu</a></li>
 				<li><a href="delivery.html">Envío</a></li>
