--- a/menu.html
+++ b/menu.html
@@ -42,7 +42,7 @@
                         </div>
                         <nav class="main_nav">
                            <ul class="d-flex flex-row align-items-center justify-content-start">
-                              <li><a href="index.html">home</a></li>
+                              <li><a href="index.html">Inicio</a></li>
                               <li><a href="about.html">Sobre nosotros</a></li>
                               <li><a href="menu.html">menu</a></li>
                               <li><a href="delivery.html">Envío</a></li>
@@ -64,7 +64,7 @@
          <div class="hamburger_bar trans_400 d-flex flex-row align-items-center justify-content-start">
             <div class="hamburger">
                <div class="menu_toggle d-flex flex-row align-items-center justify-content-start">
-                  <span>menu</span>
+                  <span></span>
                   <div class="hamburger_container">
                      <div class="menu_hamburger">
                         <div class="line_1 hamburger_lines" style="transform: matrix(1, 0, 0, 1, 0, 0);"></div>
@@ -79,7 +79,7 @@
          <div class="menu trans_800">
             <div class="menu_content d-flex flex-column align-items-center justify-content-center text-center">
                <ul>
-                  <li><a href="index.html">home</a></li>
+                  <li><a href="index.html">Inicio</a></li>
                   <li><a href="about.html">Sobre nosotros</a></li>
                   <li><a href="menu.html">menu</a></li>
                   <li><a href="delivery.html">Envío</a></li>
@@ -1515,7 +1515,7 @@
                                        <li>Parmesano</li>
                                     </ul>
                                  </div>
-                                 <div class="button sig_button trans_200"><a href="https://www.just-eat.es/restaurants-a-casa-di-marco-zaragoza/menu/?utm_source=button&utm_medium=tr-activation&utm_campaign=ACasaDiMarcoZaragoza" target="_blank">Order Now</a></div>
+                                 <div class="button sig_button trans_200"><a href="https://www.just-eat.es/restaurants-a-casa-di-marco-zaragoza/menu/?utm_source=button&utm_medium=tr-activation&utm_campaign=ACasaDiMarcoZaragoza" target="_blank">Ordenar ahora Now</a></div>
                               </div>
                            </div>
                            <div class="col-lg-6 sig_col">
@@ -1541,7 +1541,7 @@
                                        <li>Parmesano</li>
                                     </ul>
                                  </div>
-                                 <div class="button sig_button trans_200"><a href="https://www.just-eat.es/restaurants-a-casa-di-marco-zaragoza/menu/?utm_source=button&utm_medium=tr-activation&utm_campaign=ACasaDiMarcoZaragoza" target="_blank">Order Now</a></div>
+                                 <div class="button sig_button trans_200"><a href="https://www.just-eat.es/restaurants-a-casa-di-marco-zaragoza/menu/?utm_source=button&utm_medium=tr-activation&utm_campaign=ACasaDiMarcoZaragoza" target="_blank">Ordenar ahora</a></div>
                               </div>
                            </div>
                            <div class="col-lg-6 sig_col">
@@ -1566,7 +1566,7 @@
                                        <li>Huevos</li>
                                     </ul>
                                  </div>
-                                 <div class="button sig_button trans_200"><a href="https://www.just-eat.es/restaurants-a-casa-di-marco-zaragoza/menu/?utm_source=button&utm_medium=tr-activation&utm_campaign=ACasaDiMarcoZaragoza" target="_blank">Order Now</a></div>
+                                 <div class="button sig_button trans_200"><a href="https://www.just-eat.es/restaurants-a-casa-di-marco-zaragoza/menu/?utm_source=button&utm_medium=tr-activation&utm_campaign=ACasaDiMarcoZaragoza" target="_blank">Ordenar ahora</a></div>
                               </div>
                            </div>
                            <div class="col-lg-6 sig_col">
