--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@
 				<li><a href="menu.html">menu</a></li>
 				<li><a href="delivery.html">Envío</a></li>
 				<li><a href="blog.html">blog</a></li>
-				<li><a href="contact.html">contact</a></li>
+				<li><a href="contact.html">contacto</a></li>
 			</ul>
 		</div>
 		<div class="menu_reservations_phone ml-auto">
