fix about responsive

--- a/about.html
+++ b/about.html
@@ -446,6 +446,6 @@
 <script src="plugins/jquery-timepicker/jquery.timepicker.js"></script>
 <script src="js/about.js"></script>
 <script src="plugins/progressbar/progressbar.min.js"></script>
-<script src="js/elements.js"></script>
+<!-- <script src="js/elements.js"></script> -->
 </body>
 </html>
