oggetto dati funzionante

--- a/index.html
+++ b/index.html
@@ -675,8 +675,8 @@
                   <!-- risotto-->
                   <div class="col-lg-4 themenu_column">
                      <div class="themenu_col">
-                        <div class="themenu_col_title risotto-toggle">RISOTTO</div>
-                        <div class="dish_list risotto-content">
+                        <div class="themenu_col_title risoto-toggle">RISOTTO</div>
+                        <div class="dish_list risoto-content">
                            <!-- Dish -->
                            <div class="dish">
                               <div class="dish_title_container d-flex flex-xl-row flex-column align-items-start justify-content-start">
@@ -727,8 +727,8 @@
                   <!-- BOCADILLOS -->
                   <div class="col-lg-4 themenu_column">
                      <div class="themenu_col">
-                        <div class="themenu_col_title boccadillos-toggle">BOCADILLOS</div>
-                        <div class="dish_list boccadillos-content">
+                        <div class="themenu_col_title bocadillos-toggle">BOCADILLOS</div>
+                        <div class="dish_list bocadillos-content">
                            <!-- Dish -->
                            <div class="dish">
                               <div class="dish_title_container d-flex flex-xl-row flex-column align-items-start justify-content-start">
