--- a/menu.html
+++ b/menu.html
@@ -696,8 +696,8 @@
                   <!-- risotto-->
                   <div class="col-lg-4 themenu_column">
                      <div class="themenu_col">
-                        <div class="themenu_col_title risotto-toggle">RISOTTO</div>
-                        <div class="dish_list risotto-content">
+                        <div class="themenu_col_title risoto-toggle">RISOTO</div>
+                        <div class="dish_list risoto-content">
                            <!-- Dish -->
                            <div class="dish">
                               <div
@@ -754,8 +754,8 @@
                   <!-- BOCADILLOS -->
                   <div class="col-lg-4 themenu_column">
                      <div class="themenu_col">
-                        <div class="themenu_col_title boccadillos-toggle">BOCADILLOS</div>
-                        <div class="dish_list boccadillos-content">
+                        <div class="themenu_col_title bocadillos-toggle">BOCADILLOS</div>
+                        <div class="dish_list bocadillos-content">
                            <!-- Dish -->
                            <div class="dish">
                               <div
@@ -1613,7 +1613,7 @@
                                  <div class="rating_r sig_rating rating_r_5"><i></i><i></i><i></i><i></i><i></i></div>
                                  <div
                                     class="sig_name_container d-flex flex-row align-items-start justify-content-start">
-                                    <div class="sig_name">RISOTTO CON CREMA DE
+                                    <div class="sig_name">RISOTO CON CREMA DE
                                        CALABACIN Y PARMESANO</div>
                                     <div class="sig_price ml-auto">11.5€</div>
                                  </div>
