--- a/about.html
+++ b/about.html
@@ -278,9 +278,12 @@
 							<div class="owl-item text-center">
 								<div class="quote ml-auto mr-auto"><img src="images/quote.png" alt=""></div>
 								<div class="test_text">
-									<p>Es un lugar muy acogedor, te reciben con los brazos abiertos. Es un buen sitio para desayunar, comer y cenar. La calidad precio es buenísima. Lo recomiendo a todo el mundo porque van a pasar una experiencia muy buena. Y lo más importante, es diferente a los demás sitios. No os arrepentiréis si venís.</p>
+									<p>Marco y Laura encantadores!!! La comida espectacular!! No puedo recomendar nada porque esta todo exquisito!! Probar cosas nuevas.... os sorprendera!!Todo casero y hecho en el momento! Muy buen restaurante y muy buena gente!!!
+										Probar la tarta de queso hecha por Laura!! No te puedes morir sin probarla!!!! Espectacular!!!!!
+										Comida casera y con productos de primera calidad elaborados artesanalmente en el momento ....
+										Merece la pena probar su carta ....cualquier cosa....aunque tengas que venir de propio desde lejos ...no te arrepentirás 😊😊😊😊😊</p>
 								</div>
-								<div class="test_info">Alicia García Barrao, <span>Client</span></div>
+								<div class="test_info">Pilar Radigales, <span>Client</span></div>
 							</div>
 
 							<div class="owl-item text-center">
@@ -404,14 +407,14 @@
 							</li>
 							<li class="d-flex flex-row align-items-start justify-content-start">
 								<div><div class="footer_contact_title">Mail:</div></div>
-								<div class="footer_contact_text"><a href="mailto:info@acasadimarco.es" target=”_blank”>info@acasadimarco.es</a></div>
+								<div class="footer_contact_text"><a href="mailto:marco@acasadimarco.es" target=”_blank”>marco@acasadimarco.es</a></div>
 							</li>
 						</ul>
 					</div>
 				</div>
 			</div>
 			<div class="orario">
-				<p class="martes">Martes serrado</p>
+				<p class="martes">Martes cerrado</p>
 				<table style="width:100%">
 				   <tr>
 					  <th>Lunes a Jueves</th>
@@ -420,10 +423,10 @@
 					  <th>Domingo</th>                       
 				   </tr>
 				   <tr>
-					  <td>10:00h-16:00h <br> 18:00h-22:00h</td>
-					  <td>10:00h-16:00h <br> 18:00h-23:00h</td>
-					  <td>11:00h-16:00h <br> 18:00h-00:00h</td>
-					  <td>11:00h-16:00h <br> 18:00-22:30h</td>
+					  <td>12:00h-16:00h <br> 18:00h-22:30h</td>
+					  <td>12:00h-16:00h <br> 19:00h-23:00h</td>
+					  <td>12:00h-16:00h <br> 19:00h-23:00h</td>
+					  <td>12:00h-16:00h </td>
 				   </tr>
 				</table>
 			 </div>
