--- a/blog.html
+++ b/blog.html
@@ -338,14 +338,14 @@
 							</li>
 							<li class="d-flex flex-row align-items-start justify-content-start">
 								<div><div class="footer_contact_title">Mail:</div></div>
-								<div class="footer_contact_text"><a href="mailto:info@acasadimarco.es" target=”_blank”>info@acasadimarco.es</a></div>
+								<div class="footer_contact_text"><a href="mailto:marco@acasadimarco.es" target=”_blank”>marco@acasadimarco.es</a></div>
 							</li>
 						</ul>
 					</div>
 				</div>
 			</div>
 			<div class="orario">
-				<p class="martes">Martes serrado</p>
+				<p class="martes">Martes cerrado</p>
 				<table style="width:100%">
 				   <tr>
 					  <th>Lunes a Jueves</th>
@@ -354,10 +354,10 @@
 					  <th>Domingo</th>                       
 				   </tr>
 				   <tr>
-					  <td>10:00h-16:00h <br> 18:00h-22:00h</td>
-					  <td>10:00h-16:00h <br> 18:00h-23:00h</td>
-					  <td>11:00h-16:00h <br> 18:00h-00:00h</td>
-					  <td>11:00h-16:00h <br> 18:00-22:30h</td>
+					  <td>12:00h-16:00h <br> 18:00h-22:30h</td>
+					  <td>12:00h-16:00h <br> 19:00h-23:00h</td>
+					  <td>12:00h-16:00h <br> 19:00h-23:00h</td>
+					  <td>12:00h-16:00h </td>
 				   </tr>
 				</table>
 			 </div>
