--- a/elements.html
+++ b/elements.html
@@ -444,7 +444,7 @@
 							</li>
 							<li class="d-flex flex-row align-items-start justify-content-start">
 								<div><div class="footer_contact_title">Mail:</div></div>
-								<div class="footer_contact_text"><a href="mailto:info@acasadimarco.es" target=”_blank”>info@acasadimarco.es</a></div>
+								<div class="footer_contact_text"><a href="mailto:marco@acasadimarco.es" target=”_blank”>marco@acasadimarco.es</a></div>
 							</li>
 						</ul>
 					</div>
@@ -460,10 +460,10 @@
 					  <th>Domingo</th>
 				   </tr>
 				   <tr>
-					  <td>11:00h-16:00h <br> 19:00h-23:00h</td>
+					  <td>12:00h-16:00h <br> 19:00h-23:00h</td>
 					  <td class="martes">Cerrado</td>
-					  <td>11:00h-16:00h <br> 19:00h-00:00h</td>
-					  <td>11:00h-16:00h <br> 19:00h-00:00h</td>
+					  <td>12:00h-16:00h <br> 19:00h-00:00h</td>
+					  <td>12:00h-16:00h <br> 19:00h-00:00h</td>
 					  <td>10:30h-16:00h <br> 19:00-22:30h</td>
 				   </tr>
 				</table>
