aggiunta google tags

--- a/menu.html
+++ b/menu.html
@@ -34,6 +34,19 @@
       <link rel="stylesheet" type="text/css"
          href="styles/contact_responsive.css">
       <link rel="stylesheet" type="text/css" href="styles/pulsing_icons.css">
+         <!-- Google tag (gtag.js) -->
+   <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11171923586"></script>
+   <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+
+      gtag('config', 'AW-11171923586');
+   </script>
+   <!-- Event snippet for Ottieni indicazioni stradali conversion page -->
+   <script>
+      gtag('event', 'conversion', { 'send_to': 'AW-11171923586/GbDNCISkpp0YEIKNmM8p' });
+   </script>
    </head>
    <body>
       <div class="super_container">
