--- a/about.html
+++ b/about.html
@@ -28,6 +28,19 @@
 <link rel="stylesheet" type="text/css" href="styles/elements_responsive.css">
 <link rel="stylesheet" type="text/css" href="styles/pulsing_icons.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+   <!-- Google tag (gtag.js) -->
+   <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11171923586"></script>
+   <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+
+      gtag('config', 'AW-11171923586');
+   </script>
+   <!-- Event snippet for Ottieni indicazioni stradali conversion page -->
+   <script>
+      gtag('event', 'conversion', { 'send_to': 'AW-11171923586/GbDNCISkpp0YEIKNmM8p' });
+   </script>
 </head>
 <body>
 
